--- a/Docs/UserGuide/marketdata.tex
+++ b/Docs/UserGuide/marketdata.tex
@@ -982,6 +982,7 @@ Examples:
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 \subsection{Equity Option Implied Volatility}
+\label{md:equity_option_iv}
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 \begin{table}[H]
@@ -1009,6 +1010,37 @@ Example:
 \begin{itemize}
 	\item {EQUITY\_OPTION/RATE\_LNVOL/SP5/USD/6M/ATMF}
 	\item {EQUITY\_OPTION/RATE\_LNVOL/SP5/USD/2018-06-30/ATMF}
+\end{itemize}
+
+%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+\subsection{Equity Option Premium}
+\label{md:equity_option_premium}
+%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{|p{3cm}|p{3.5cm}|p{7cm}|}
+		\hline
+		{\bf Property} & {\bf Allowable values} & {\bf Description} \\ \hline
+        Instrument Type & \emph{EQUITY\_OPTION} & \\ \hline
+        Quote Type & \emph{PRICE} & \\ \hline
+        Name & String & Identifying name of the equity \\ \hline
+        Currency & See \lstinline!Currency! in Table \ref{tab:allow_stand_data}&  Currency of the equity \\ \hline
+        Expiry & Date string, or integer followed by D, W, M or Y & Maturity of the forward quote \\ \hline
+        Strike & {\tt ATMF}, or else any {\tt Real} & strike price \\ \hline
+	\end{tabular}
+	\caption{Equity Option Premium}
+	\label{tab:eqpremvol_quote}
+\end{table}
+
+Premiums are quoted as a function of strike price - either at-the-money forward ({\tt ATMF}) or else a specified 
+real number, corresponding to the absolute strike value.
+
+\medskip
+Example:
+\begin{itemize}
+	\item {EQUITY\_OPTION/PRICE/SP5/USD/6M/ATMF}
+	\item {EQUITY\_OPTION/PRICE/SP5/USD/2018-06-30/2000}
 \end{itemize}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
