--- a/Docs/UserGuide/marketdata.tex
+++ b/Docs/UserGuide/marketdata.tex
@@ -849,7 +849,7 @@ Example:
 \end{itemize}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-\subsection{Cap/Floor Implied Volatility}\label{ss:capfloor_impl_vol_quote}
+\subsection{Cap Floor Implied Volatility}\label{ss:capfloor_impl_vol_quote}
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 \begin{table}[H]
@@ -858,24 +858,24 @@ Example:
     \hline
     {\bf Property} & {\bf Allowable values} & {\bf Description} \\ \hline
     Instrument Type & \emph{CAPFLOOR} & \\ \hline
-    Quote Type & \emph{RATE\_LNVOL} & \\ \hline
-    Currency & See \lstinline!Currency! in Table \ref{tab:allow_stand_data}&  Currency of the Cap/Floor volatility\\ \hline
-    Term & An integer followed by D, W, M or Y & Period from start to expiry \\ \hline
-    IndexTenor & An integer followed by D, W, M or Y & Underlying index tenor \\ \hline
-    Atm & \emph{1, 0} & ATM volatility quote if true (1), otherwise (0) smile quote\\ \hline
-    Relative & \emph{1, 0} & Relative quote (to be added to atm vol) if true (1), otherwise (0) absolute quote\\ \hline
-    Strike & Real number & Strike rate\\ \hline
+    Quote Type & \lstinline!RATE_LNVOL!, \lstinline!RATE_NVOL!, \lstinline!RATE_SLNVOL! & Lognormal quoted volatility, normal quoted volatility, shifted lognormal quoted volatility. \\ \hline
+    Currency & See \lstinline!Currency! in Table \ref{tab:allow_stand_data}&  Currency of the cap floor volatility. \\ \hline
+    Term & A valid tenor string & Period from start to cap or floor maturity. \\ \hline
+    IndexTenor & A valid tenor string & Underlying index tenor e.g.\ \lstinline!3M! for \lstinline!EUR-EURIBOR-3M!. \\ \hline
+    ATM & \lstinline!1! or \lstinline!0! & True, i.e.\ \lstinline!1!, for an ATM quote and false, i.e.\ \lstinline!0!, for an absolute strike quote. \\ \hline
+    Relative & \lstinline!1! or \lstinline!0! & Should be set to \lstinline!1! for an ATM quote and to \lstinline!0! for an absolute strike quote. \\ \hline
+    Strike & Real number & Strike of cap or floor. Should be set to \lstinline!0! for an ATM quote. \\ \hline
   \end{tabular}
-  \caption{Cap/Floor Implied Volatility}
+  \caption{Cap floor implied volatility quote}
   \label{tab:capfloor_implvol_quote}
 \end{table}
 
+If a cap floor shift quote needs to be provided, i.e. in the case of a shifted lognormal surface, the quote is of the form \lstinline!CAPFLOOR/SHIFT/Currency/IndexTenor! where the meaning of \lstinline!Currency! and \lstinline!IndexTenor! are given in Table \ref{tab:capfloor_implvol_quote}.
 
-\medskip
-Examples:
+We have the following examples of cap floor implied volatility quotes:
 \begin{itemize}
-\item {CAPFLOOR/RATE\_LNVOL/EUR/10Y/6M/0/0/0.0350} (smile, absolute, strike 3.5\%)
-\item {CAPFLOOR/RATE\_LNVOL/EUR/10Y/6M/1/0/0.0000} (atm, absolute, irrelevant strike)
+\item \lstinline!CAPFLOOR/RATE_LNVOL/EUR/10Y/6M/1/1/0!: 10Y ATM cap floor implied lognormal volatility quote where the index tenor is 6M.
+\item \lstinline!CAPFLOOR/RATE_LNVOL/EUR/10Y/6M/0/0/0.035!: 10Y 3.5\% strike cap floor implied lognormal volatility quote where the index tenor is 6M.
 \end{itemize}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
