--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4178,7 +4178,21 @@ A sample {\tt calendaradjustment.xml} file can be found in the Global example in
 \caption{Calendar Adjustment}\label{lst:calendar_adjustment}
 \end{longlisting}
 
+If the parameter `BaseCalendar' is provided then a new calendar will be created using the specified calendar as a base, and adding any `AdditionalHolidays' or `AdditionalBusinessDays'. In the example below a new calendar `Japan\_amended' is being created, it will include any additional holidays/business days specified in the original `Japan' calendar plus one additional date.
 
+\begin{longlisting}
+%\hrule\medskip
+  \begin{minted}[fontsize=\scriptsize]{xml}
+<CalendarAdjustments>
+  <Calendar name="Japan\_amended">
+    <BaseCalendar>Japan</BaseCalendar>
+    <AdditionalHolidays>
+      <Date>2020-04-06</Date>
+    </AdditionalHolidays>
+</CalendarAdjustments>
+  \end{minted}
+\caption{Calendar Adjustment creating a new calendar}\label{lst:calendar_adjustment_2}
+\end{longlisting}
 %--------------------------------------------------------
 \subsection{Curves: {\tt curveconfig.xml}}\label{sec:curveconfig}
 %--------------------------------------------------------
