--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -204,7 +204,7 @@ and {\bf derivative value adjustments}
 for portfolios with netting, variation and initial margin agreements. 
 
 \medskip
-The sensitivity framework yields further {\bf market risk measures} such as ORE's parametric Value at Risk which takes deltas, vegas, gammas and cross gammas into account. This may be used to benchmark initial margin models such ISDA'S Standard Initial Margin Model. \\
+The sensitivity framework yields further {\bf market risk measures} such as ORE's parametric Value at Risk which takes deltas, vegas, gammas and cross gammas into account. This may be used to benchmark initial margin models such ISDA's Standard Initial Margin Model. \\
 
 \medskip
 Subsequent ORE releases will also compute {\bf regulatory capital charges} for counterparty credit risk under the new standardised approach (SA-CCR), and the Monte Carlo based market risk measures will be complemented by parametric methods, e.g. for benchmarking various initial margin calculation models applied in cleared and non-cleared derivatives business.
@@ -215,7 +215,7 @@ Subsequent ORE releases will also compute {\bf regulatory capital charges} for c
 %releases from Q1 2017 onwards will extend the derivative product and the risk factor range to Inflation, Credit, Equity
 %and Commodity. With the introduction of credit risk factors, the scope will also be extended to cover cash products
 %(loans and bonds) and related portfolio analytics.
-The product coverage of the fourth release of ORE in March 2018 is sketched in the following table.
+The product coverage of the fifth release of ORE in June 2020 is sketched in the following table.
 \begin{table}[hbt]
 \scriptsize
 \begin{center}
@@ -271,7 +271,7 @@ Future releases will further extend the product range and analytics coverage ind
 \medskip The simulation models applied in ORE's risk factor evolution implement the models discussed in detail in {\em
   Modern Derivatives Pricing and Credit Exposure Analysis} \cite{Lichters}: The IR/FX/INF/EQ risk factor evolution is based on
 a cross currency model consisting of an arbitrage free combination of Linear Gauss Markov models for all interest rates
-and lognormal processes for FX rates and EQ prices, Dodgeson-Kainth models for inflation. The model components are calibrated to cross currency discounting and forward curves, Swaptions, FX Options, EQ Options and CPI caps/floors.
+and lognormal processes for FX rates and EQ prices, Dodgson-Kainth models for inflation. The model components are calibrated to cross currency discounting and forward curves, Swaptions, FX Options, EQ Options and CPI caps/floors.
 
 \subsubsection*{Further Resources}
 \begin{itemize}
@@ -299,7 +299,7 @@ parametrisation and the structure of trade and market data input.
 This section summarises the high level changes between release 4 (May 2019) and 5 (June 2020).
 
 \bigskip
-INSTRMENTS
+INSTRUMENTS
 \begin{itemize}
 \item Add Inflation CPI and YoY Caps/Floors and capped/floored cash flows
 \item Add Forward Bond
@@ -436,9 +436,9 @@ OTHER
 %========================================================
 
 The core processing steps followed in ORE to produce risk analytics results are sketched in Figure \ref{fig_process}.
-All ORE calculations and output are generated in three fundamental process steps as indicated in the three boxes in the
+All ORE calculations and outputs are generated in three fundamental process steps as indicated in the three boxes in the
 upper part of the figure. In each of these steps appropriate data (described below) is loaded and results are generated,
-either in form of a human readable report, or in an intermediate step as pure data files (e.g. NPV data, exposure data).
+either in the form of a human readable report, or in an intermediate step as pure data files (e.g. NPV data, exposure data).
 \begin{figure}[h]
 \begin{center}
 \includegraphics[scale=0.6]{process.pdf}
@@ -482,7 +482,7 @@ cube data:
 \item computing various XVAs including CVA, DVA, FVA, MVA for all netting sets, with and without taking collateral
   (variation and initial margin) into account, on demand with allocation to the trade level.
 \end{itemize}
-The output of this process step are XVA reports and the 'net' NPV cube, i.e. after aggregation, netting and collateral. \\
+The outputs of this process step are XVA reports and the 'net' NPV cube, i.e. after aggregation, netting and collateral. \\
 
 The example section \ref{sec:examples} demonstrates for representative product types how the described processing steps
 can be combined in a simple batch process which produces the mentioned reports, output files and exposure evolution
@@ -520,6 +520,7 @@ When unpacked, it creates a directory {\tt ORE-<VERSION>} with the following fil
 \item {\tt FrontEnd/}
 \item {\tt OREAnalytics/}
 \item {\tt OREData/}
+\item {\tt ORETest/}
 \item {\tt QuantExt/}
 \item {\tt ThirdPartyLibs/}
 \item {\tt tools/}
@@ -544,7 +545,7 @@ The release bundle does contain the ORE source code, which is sufficient to buil
   installed; QuantLib needs to be located in this project directory {\tt ORE-<VERSION>}. Alternatively, you can create a
   symbolic link named QuantLib here that points to the actual QuantLib directory
 \item Build QuantExt, OREData, OREAnalytics, App (in this order) as described in section \ref{sec:build}
-\item Note that ThirdPartyLibs does not need to be built, it contains RapdidXml, header only code for reading and
+\item Note that ThirdPartyLibs does not need to be built, it contains RapidXml, header only code for reading and
   writing XML files
 \item Move on to section \ref{sec:python} and the examples in section \ref{sec:examples}.
 \end{itemize}
@@ -580,6 +581,12 @@ This will create a folder 'ore' in your current directory that contains the code
 
 \end{enumerate}
 
+Note that one can also run 
+
+{\footnotesize \tt\% git clone --recurse-submodules https://github.com/opensourcerisk/engine.git ore}
+
+in step 2, which also performs the steps in 3.
+
 \subsubsection{Boost}\label{sec:boost}
 
 QuantLib and ORE depend on the boost C++ libraries. Hence these need to be installed before building QuantLib and
@@ -595,8 +602,7 @@ ORE. On all platforms the minimum required boost version is 1\_63 as of ORE rele
 \item 32-bit: \cite{boost-binaries}{\bs}VERSION{\bs}boost\_VERSION-msvc-14.0-32.exe{\bs}download 
 \item 64-bit: \cite{boost-binaries}{\bs}VERSION{\bs}boost\_VERSION-msvc-14.0-64.exe{\bs}download
 \end{itemize}
-\item Start the installation file and choose an installation folder. Take a note of that folder as it will be needed
-  later on.
+\item Start the installation file and choose an installation folder (the ``boost root directory''). Take a note of that folder as it will be needed later on.   
 \item Finish the installation by clicking Next a couple of times.
 \end{enumerate}
     
@@ -649,7 +655,7 @@ C++ support under the Programming Languages features (disabled by default).
   you expand, they all contain the same configuration file. You should now see 'Microsoft.Cpp.Win32.user' respectively
   'Microsoft.Cpp.x64.user' depending on whether you chose a Win32 or a x64 configuration. Click on this file to open the
   property pages. Select VC++ Directories and then add your boost directory to the 'Include Directories' entry. Likewise
-  add your boost library directory to the 'Library Directories' entry. If for example your boost installation is in {\tt
+  add your boost library directory (the directory that contains the *.lib files) to the 'Library Directories' entry. If for example your boost installation is in {\tt
     C:{\bs}boost\_1\_63\_0} and the libraries reside in the {\tt stage{\bs}lib} subfolder, add {\tt
     C:{\bs}boost\_1\_63\_0} to the 'Include Directories' entry and {\tt C:{\bs}boost\_1\_63\_0{\bs}stage{\bs} lib} to the
   'Library Directories' entry. Press OK. 
@@ -900,7 +906,7 @@ To build on Windows using CMake and an existing Visual Studio installation you c
 this from the top-level oreswig directory
 
 {\footnotesize
-{\tt mkdir builddir $\backslash$} \\
+{\tt mkdir build $\backslash$} \\
 {\tt cmake -G "Visual Studio 15 2017" $\backslash$}\\
 \hspace{1cm} {\tt -A x64 $\backslash$}\\
 \hspace{1cm} {\tt -D SWIG\_DIR=C:$\backslash$dev$\backslash$swigwin$\backslash$Lib $\backslash$}\\
@@ -908,8 +914,8 @@ this from the top-level oreswig directory
 \hspace{1cm} {\tt -D ORE:PATHNAME=C:$\backslash$dev$\backslash$ORE$\backslash$master $\backslash$}\\
 \hspace{1cm} {\tt -D BOOST\_ROOT=C:$\backslash$dev$\backslash$boost $\backslash$}\\
 \hspace{1cm} {\tt -S OREAnalytics-SWIG/Python $\backslash$}\\
-\hspace{1cm} {\tt -B builddir $\backslash$}\\
-{\tt cmake --build builddir -v}
+\hspace{1cm} {\tt -B build $\backslash$}\\
+{\tt cmake --build build -v}
 }
 
 \medskip
@@ -1095,7 +1101,7 @@ File Name & Description \\
 \end{table}
 
 Note: When building ORE from sources on Windows platforms, make sure that you copy your {\tt ore.exe} to the binary
-directory {\tt bin/win32/} respectively {\tt bin/x64/}. Otherwise the examples may be run using the pre-compiled
+directory {\tt App/bin/win32/} respectively {\tt App/bin/x64/}. Otherwise the examples may be run using the pre-compiled
 executables which come with the ORE release.
 
 %--------------------------------------------------------
@@ -1247,7 +1253,7 @@ Swap are shown in figure \ref{fig_4}.
 \end{center}
 \caption{European callable Swap represented as a package consisiting of non-callable Swap and Swaption. The Swaption has
   physical delivery and offsets all future Swap cash flows if exercised. The exposure evolution of the package is shown
-  here as 'EPE NettingSet' (green line). This is covered by the pink line, the exposure evolution of the same Swap but
+  here as 'EPE Netting Set' (green line). This is covered by the pink line, the exposure evolution of the same Swap but
   with maturity on the exercise date. The graphs match perfectly here, because the example Swap is deep in the money and
   exercise probability is close to one. Simulation with 5000 paths and quarterly time steps.}
 \label{fig_4}
@@ -1288,7 +1294,7 @@ Floor and a long Collar that exactly offsets the netted Cap and Floor.
 \end{figure}
 
 Further three test portfolios are provided as part of this example. Run the example and inspect the respective output
-directories {\tt Examples/Example\_7/Output/portfolio\_\#}. Note that these directories have to be present/created
+directories {\tt Examples/Example\_6/Output/portfolio\_\#}. Note that these directories have to be present/created
 before running the batch with {\tt python run.py}.
 
 %--------------------------------------------------------
@@ -1329,6 +1335,7 @@ Recall that the FX Option value $NPV(t)$ as of time $0 \leq t \leq T$ satisfies
 \frac{NPV(t)}{N(t)} &= \mbox{Nominal}\times\E_t\left[\frac{(X(T) - K)^+}{N(T)}\right]\\
 NPV(0) &= \E\left[\frac{NPV(t)}{N(t)}\right] = \E\left[\frac{NPV^+(t)}{N(t)} \right]= \EPE(t) 
 \end{align*}
+where $N(t)$ denotes the numeraire asset.
 One would therefore expect a flat exposure evolution up to option expiry. The deviation from this in ORE's simulation is
 due to the pricing approach chosen here under scenarios. A Black FX option pricer is used with deterministic Black
 volatility derived from today's volatility structure (pushed or rolled forward, see section \ref{sec:sim_market}). The
