--- a/Docs/UserGuide/tradecomponents/cpileg.tex
+++ b/Docs/UserGuide/tradecomponents/cpileg.tex
@@ -1,8 +1,8 @@
 \subsubsection{CPI Leg Data}
 \label{ss:cpilegdata}
 
-A CPI leg contains a series of CPI-linked coupon payments $I(t)/I_0\,N\,c\,\delta$ and a final
-inflation-linked redemption $I(t)/I_0\,N$. The final redemption can be
+A CPI leg contains a series of CPI-linked coupon payments $(I(t)/I_0)\,N\,c\,\delta$ and, if \lstinline!NotionalFinalExchange! is set to \emph{true}, a final
+inflation-linked redemption $(I(t)/I_0)\,N$. The final redemption can be
 subtracting the (un-inflated) notional $N$, i.e. $(I(t)/I_0-1)\,N$,
 see below.
 
@@ -57,9 +57,18 @@ Allowable values: Boolean node, allowing \emph{Y, N, 1, 0, true, false} etc. The
   \lstinline!Cap! indicating that the inflation indexed payment is
   capped; the cap is applied to the inflation index and expressed as
   an inflation rate, see CPI Cap/Floor in the Product Description. \\
-  If the cap is constant over the life of the cpi leg, only one cap value shouldbe entered. If two or more coupons have different caps, multiple cap valuesare required, each represented by a \lstinline!Cap! child element. The first cap valuecorresponds to the first coupon, the second cap value corresponds to thesecond coupon, etc. If the number of coupons exceeds the number of capvalues, the cap will be kept at at the value of last entered spread for theremaining coupons. The number of entered cap values cannot exceed thenumber of coupons.
+  If the cap is constant over the life of the 
+cpi leg, only one cap value should
+be entered. If two or more coupons have different caps, multiple cap values
+are required, each represented by a \lstinline!Cap! child element. The first cap value
+corresponds to the first coupon, the second cap value corresponds to the
+second coupon, etc. If the number of coupons exceeds the number of cap
+values, the cap will be kept at at the value of last entered spread for the
+remaining coupons. The number of entered cap values cannot exceed the
+number of coupons.
 
-Allowable values: Each child element can take any real number. The cap isexpressed in decimal form, e.g. 0.03 is a cap of 3\%.
+Allowable values: Each child element can take any real number. The cap is
+expressed in decimal form, e.g. 0.03 is a cap of 3\%.
 
 \item Floors [Optional]: This node contains child elements of type
   \lstinline!Floor! indicating that the inflation indexed payment is
@@ -67,7 +76,8 @@ Allowable values: Each child element can take any real number. The cap isexpres
   an inflation rate. The mode of specification is analogous to caps, see
   above.
 
-Allowable values: Each child element can take any real number. The floor isexpressed in decimal form, e.g. 0.01 is a cap of 1\%.
+Allowable values: Each child element can take any real number. The floor is
+expressed in decimal form, e.g. 0.01 is a cap of 1\%.
 
 \item NakedOption [Optional]: Optional node, if \emph{true} the leg represents only the embedded floor, cap or collar. 
 By convention these embedded options are considered long if the leg is a receiver leg, otherwise short. 
@@ -88,6 +98,10 @@ Whether the leg cotains a final redemption flow at all or not depends on the
         <Currency>GBP</Currency>
         <Notionals>
           <Notional>10000000</Notional>
+          <Exchanges>
+            <NotionalInitialExchange>false</NotionalInitialExchange>
+            <NotionalFinalExchange>true</NotionalFinalExchange>
+          </Exchanges>          
         </Notionals>
         <DayCounter>ACT/ACT</DayCounter>
         <PaymentConvention>Following</PaymentConvention>
