--- a/Docs/UserGuide/fixingdata.tex
+++ b/Docs/UserGuide/fixingdata.tex
@@ -147,8 +147,8 @@ DOM             & Any supported currency code \\
 \hline
 \textbf{Index Component} & \textbf{Allowable Values} \\
 \hline
-NAME           & \textit{\begin{tabular}[c]{@{}l@{}}EUHICP\\ EUHICPXT\\ FRHICP\\ UKRPI\\ 
-		USCPI\\ ZACPI \end{tabular}} \\ 
+NAME           & \textit{\begin{tabular}[c]{@{}l@{}}EUHICP\\ EUHICPXT\\ FRHICP\\ FRCPI\\ UKRPI\\
+		USCPI\\ ZACPI\\ BEHICP \end{tabular}} \\
 \hline
 \end{tabular}
 \caption{Allowable values for zero inflation indices.}
