add static seasonality factors

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4634,6 +4634,9 @@ elements are the following:
                <Factor>SEASONALITY/RATE/MULT/USCPI/NOV</Factor>
                <Factor>SEASONALITY/RATE/MULT/USCPI/DEC</Factor>
            </Factors>
+           <OverrideFactors>
+               1.00,1.00,1.00,1.00,1.00,1.00,1.00,1.00,1.00,1.00,1.00,1.00
+           </OverrideFactors>
        </Seasonality>
    </InflationCurve>
 </InflationCurves>
@@ -4660,6 +4663,10 @@ The optional seasonality block defines a multiplicative seasonality and contains
   month matters, the year is ignored.
 \item {\tt Frequency:} Defines the frequency of the factors (usually identical to the index's fixing frequency).
 \item {\tt Factors:} Multiplicative seasonality correction factors, must be part of the market data.
+\item {\tt OverrideFactors:} A numeric list of seaosonality correction factors, replacing the Factors. This allows to
+  specify a static seasonality correction that does not require market data quotes. If both Factors and OverrideFactors
+  are given, the OverrideFactors are used. Otherwise only one of Factors, OverrideFactors is required in a seasonality
+  block.
 \end{itemize}
 
 We note that if zero coupon swap market quotes are given, but the type is set to YY, the zero coupon swap quotes will be
